--- a/netcore/Views/Shipment/Delete.cshtml
+++ b/netcore/Views/Shipment/Delete.cshtml
@@ -56,25 +56,25 @@
             @Html.DisplayNameFor(model => model.branch)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.branch.branchId)
+            @Html.DisplayFor(model => model.branch.branchName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.customer)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.customer.customerId)
+            @Html.DisplayFor(model => model.customer.customerName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.salesOrder)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.salesOrder.salesOrderId)
+            @Html.DisplayFor(model => model.salesOrder.salesOrderNumber)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.warehouse)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.warehouse.warehouseId)
+            @Html.DisplayFor(model => model.warehouse.warehouseName)
         </dd>
     </dl>
 
