--- a/netcore/Views/TransferOrder/Create.cshtml
+++ b/netcore/Views/TransferOrder/Create.cshtml
@@ -37,7 +37,7 @@
             <input asp-for="description" class="form-control" />
             <span asp-validation-for="description" class="text-danger"></span>
         </div>
-        <div class="row">
+        <div class="row hidden">
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="branchIdFrom" class="control-label"></label>
