--- a/netcore/Views/TransferOrder/Details.cshtml
+++ b/netcore/Views/TransferOrder/Details.cshtml
@@ -98,7 +98,8 @@
                         <table id="grid" name="grid" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="col-lg-11">transferOrderId</th>
+                                    <th class="col-lg-6">Product</th>
+                                    <th class="col-lg-5">Qty Transfer</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
                             </thead>
@@ -148,7 +149,8 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "transferOrderLineId" },
+                    { "data": "product.productCode" },
+                    { "data": "qty" },
                     {
                         "data": "transferOrderLineId",
                         "render": function (data) {
