--- a/netcore/Views/TransferOut/Delete.cshtml
+++ b/netcore/Views/TransferOut/Delete.cshtml
@@ -32,25 +32,25 @@
             @Html.DisplayNameFor(model => model.branchIdFrom)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.branchIdFrom)
+            @Html.DisplayFor(model => model.branchFrom.branchName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.warehouseIdFrom)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.warehouseIdFrom)
+            @Html.DisplayFor(model => model.warehouseFrom.warehouseName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.branchIdTo)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.branchIdTo)
+            @Html.DisplayFor(model => model.branchTo.branchName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.warehouseIdTo)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.warehouseIdTo)
+            @Html.DisplayFor(model => model.warehouseTo.warehouseName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.createdAt)
@@ -62,7 +62,7 @@
             @Html.DisplayNameFor(model => model.transferOrder)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.transferOrder.transferOrderId)
+            @Html.DisplayFor(model => model.transferOrder.transferOrderNumber)
         </dd>
     </dl>
 
