add print button

--- a/netcore/Views/Shipment/Details.cshtml
+++ b/netcore/Views/Shipment/Details.cshtml
@@ -86,6 +86,7 @@
             <!-- /.box-body -->
             <div class="box-footer">
                 <div class="form-group">
+                    <a asp-action="Print" asp-route-id="@Model.shipmentId" class="btn btn-primary"><i class="fa-print"></i> Print Delivery Order</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
