--- a/netcore/Views/PurchaseOrder/Details.cshtml
+++ b/netcore/Views/PurchaseOrder/Details.cshtml
@@ -117,7 +117,7 @@
             <div class="box-footer">
                 <div class="form-group">
                     <a asp-action="Edit" asp-route-id="@Model.purchaseOrderId" class="btn btn-primary">Edit</a>
-                    <a asp-action="Print" asp-route-id="@Model.purchaseOrderId" class="btn btn-primary"><i class="fa-print"></i> Print Purchase Order</a>
+                    <a asp-action="ShowPurchaseOrder" asp-route-id="@Model.purchaseOrderId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print Purchase Order</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
