--- a/netcore/Views/Shipment/Details.cshtml
+++ b/netcore/Views/Shipment/Details.cshtml
@@ -86,8 +86,8 @@
             <!-- /.box-body -->
             <div class="box-footer">
                 <div class="form-group">
-                    <a asp-action="Print" asp-route-id="@Model.shipmentId" class="btn btn-primary"><i class="fa-print"></i> Print Delivery Order</a>
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
+                    <a asp-action="ShowDeliveryOrder" asp-route-id="@Model.shipmentId" class="btn btn-primary pull-right"><i class="fa fa-print"></i> Print Delivery Order</a>
                 </div>
             </div>
             <!-- /.box-footer-->
