--- a/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
@@ -35,7 +35,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Home")">
                     <a href="@Url.Action("Index", "Home")">
-                        <i class="fa fa-circle-o"></i> <span>Home</span>
+                        <i class="fa fa-bar-chart"></i> <span>Home</span>
                     </a>
                 </li>
             }
@@ -44,7 +44,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Branch")">
                     <a href="@Url.Action("Index", "Branch")">
-                        <i class="fa fa-circle-o"></i> <span>Branch</span>
+                        <i class="fa fa-building-o"></i> <span>Branch</span>
                     </a>
                 </li>
             }
@@ -53,7 +53,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Warehouse")">
                     <a href="@Url.Action("Index", "Warehouse")">
-                        <i class="fa fa-circle-o"></i> <span>Warehouse</span>
+                        <i class="fa fa-cubes"></i> <span>Warehouse</span>
                     </a>
                 </li>
             }
@@ -62,7 +62,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Product")">
                     <a href="@Url.Action("Index", "Product")">
-                        <i class="fa fa-circle-o"></i> <span>Product</span>
+                        <i class="fa fa-tags"></i> <span>Product</span>
                     </a>
                 </li>
             }
@@ -71,7 +71,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Vendor")">
                     <a href="@Url.Action("Index", "Vendor")">
-                        <i class="fa fa-circle-o"></i> <span>Vendor</span>
+                        <i class="fa fa-industry"></i> <span>Vendor</span>
                     </a>
                 </li>
             }
@@ -80,7 +80,7 @@
             {
                 <li class="@Html.IsSelected(controller: "PurchaseOrder")">
                     <a href="@Url.Action("Index", "PurchaseOrder")">
-                        <i class="fa fa-circle-o"></i> <span>Purchase Order</span>
+                        <i class="fa fa-file-text"></i> <span>Purchase Order</span>
                     </a>
                 </li>
             }
@@ -89,7 +89,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Receiving")">
                     <a href="@Url.Action("Index", "Receiving")">
-                        <i class="fa fa-circle-o"></i> <span>Receiving</span>
+                        <i class="fa fa-truck"></i> <span>Receiving</span>
                     </a>
                 </li>
             }
@@ -98,7 +98,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Customer")">
                     <a href="@Url.Action("Index", "Customer")">
-                        <i class="fa fa-circle-o"></i> <span>Customer</span>
+                        <i class="fa fa-bank"></i> <span>Customer</span>
                     </a>
                 </li>
             }
@@ -107,7 +107,7 @@
             {
                 <li class="@Html.IsSelected(controller: "SalesOrder")">
                     <a href="@Url.Action("Index", "SalesOrder")">
-                        <i class="fa fa-circle-o"></i> <span>Sales Order</span>
+                        <i class="fa fa-cart-plus"></i> <span>Sales Order</span>
                     </a>
                 </li>
             }
@@ -116,7 +116,7 @@
             {
                 <li class="@Html.IsSelected(controller: "Shipment")">
                     <a href="@Url.Action("Index", "Shipment")">
-                        <i class="fa fa-circle-o"></i> <span>Shipment</span>
+                        <i class="fa fa-plane"></i><span> Shipment</span>
                     </a>
                 </li>
             }
@@ -125,7 +125,7 @@
             {
                 <li class="@Html.IsSelected(controller: "TransferOrder")">
                     <a href="@Url.Action("Index", "TransferOrder")">
-                        <i class="fa fa-circle-o"></i> <span>Transfer Order</span>
+                        <i class="fa fa-recycle"></i> <span>Transfer Order</span>
                     </a>
                 </li>
             }
@@ -134,7 +134,7 @@
             {
                 <li class="@Html.IsSelected(controller: "TransferOut")">
                     <a href="@Url.Action("Index", "TransferOut")">
-                        <i class="fa fa-circle-o"></i> <span>Goods Issue</span>
+                        <i class="fa fa-upload"></i> <span>Goods Issue</span>
                     </a>
                 </li>
             }
@@ -143,7 +143,7 @@
             {
                  <li class="@Html.IsSelected(controller: "TransferIn")">
                     <a href="@Url.Action("Index", "TransferIn")">
-                        <i class="fa fa-circle-o"></i> <span>Goods Receive</span>
+                        <i class="fa fa-download"></i> <span>Goods Receive</span>
                     </a>
                 </li>
             }
@@ -153,7 +153,7 @@
                 <li class="header">CONFIG</li>
                 <li class="@Html.IsSelected(controller: "ApplicationUser")">
                     <a href="@Url.Action("Index", "ApplicationUser")">
-                        <i class="fa fa-circle-o"></i> <span>User Roles</span>
+                        <i class="fa fa-users"></i> <span>User Roles</span>
                     </a>
                 </li>
 
@@ -162,7 +162,7 @@
             <li class="header">BONUS TEMPLATE</li>
             <li class="@Html.IsSelected(controller: "Adminlte", action: "Dashboardv1")">
                 <a href="@lte.MVC.Pages.Dashbaordv1.Url" target="_blank">
-                    <i class="fa fa-circle-o"></i> <span>Demo</span>
+                    <i class="fa fa-gears"></i> <span>Demo</span>
                 </a>
             </li>
         </ul>
