--- a/netcore/Views/Shipment/Index.cshtml
+++ b/netcore/Views/Shipment/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
+    ViewData["EntityIcon"] = "fa fa-plane";
+    ViewData["ListTitle"] = "Shipment List";
 }
 
 
