--- a/netcore/Views/PurchaseOrder/Index.cshtml
+++ b/netcore/Views/PurchaseOrder/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
+    ViewData["EntityIcon"] = "fa fa-file-text";
+    ViewData["ListTitle"] = "Purchase Order List";
 }
 
 
