--- a/netcore/Views/SalesOrder/Index.cshtml
+++ b/netcore/Views/SalesOrder/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
+    ViewData["EntityIcon"] = "fa fa-cart-plus";
+    ViewData["ListTitle"] = "Sales Order List";
 }
 
 
