--- a/netcore/Views/TransferOrder/Index.cshtml
+++ b/netcore/Views/TransferOrder/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
+    ViewData["EntityIcon"] = "fa fa-recycle";
+    ViewData["ListTitle"] = "Transfer Order List";
 }
 
 
