--- a/netcore/Views/TransferOut/Index.cshtml
+++ b/netcore/Views/TransferOut/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
+    ViewData["EntityIcon"] = "fa fa-upload";
+    ViewData["ListTitle"] = "Goods Issue List";
 }
 
 
