--- a/netcore/Views/Warehouse/Index.cshtml
+++ b/netcore/Views/Warehouse/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminlteNetcoreIndex.cshtml";
+    ViewData["EntityIcon"] = "fa fa-cubes";
+    ViewData["ListTitle"] = "Warehouse List";
 }
 
 
