add icon to CRUD

--- a/netcore/Views/Customer/Edit.cshtml
+++ b/netcore/Views/Customer/Edit.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_AdminlteNetcoreEdit.cshtml";
+    ViewData["EntityIcon"] = "fa fa-bank";
 }
 
 
