--- a/netcore/Views/Shared/_AdminlteNetcoreCreate.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreCreate.cshtml
@@ -6,6 +6,7 @@
 
     ApplicationUser appUser = await UserManager.GetUserAsync(User);
     string controller = (string)ViewContext.RouteData.Values["controller"];
+    string entityIcon = ViewData["EntityIcon"] as string;
 
 }
 <html>
@@ -33,7 +34,7 @@
                 <!-- Content Header (Page header) -->
                 <section class="content-header">
                     <h1>
-                        Create @controller
+                        <i class="@entityIcon"></i> Create @controller
                     </h1>
                 </section>
                 <!-- Main content -->
