--- a/netcore/Views/Shared/_AdminlteNetcoreDetails.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreDetails.cshtml
@@ -7,6 +7,7 @@
     ApplicationUser appUser = await UserManager.GetUserAsync(User);
     string controller = (string)ViewContext.RouteData.Values["controller"];
     string id = (string)ViewContext.RouteData.Values["id"];
+    string entityIcon = ViewData["EntityIcon"] as string;
 }
 <html>
 <head>
@@ -32,7 +33,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    @controller Details
+                    <i class="@entityIcon"></i> @controller Details
                 </h1>
             </section>
             <!-- Main content -->
