--- a/netcore/Views/Warehouse/Delete.cshtml
+++ b/netcore/Views/Warehouse/Delete.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
+    ViewData["EntityIcon"] = "fa fa-cubes";
 }
 
 
