--- a/netcore/Views/Branch/Delete.cshtml
+++ b/netcore/Views/Branch/Delete.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminlteNetcoreDelete.cshtml";
-    
+    ViewData["EntityIcon"] = "fa fa-building-o";
+
 }
 
 
