--- a/netcore/Views/PurchaseOrder/Create.cshtml
+++ b/netcore/Views/PurchaseOrder/Create.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
+    ViewData["EntityIcon"] = "fa fa-file-text";
 }
 
 
