--- a/netcore/Views/TransferOut/Edit.cshtml
+++ b/netcore/Views/TransferOut/Edit.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_AdminlteNetcoreEdit.cshtml";
-    }
+    ViewData["EntityIcon"] = "fa fa-upload";
+}
 
 
 <div class="row">
