--- a/netcore/Views/Shared/_AdminlteNetcoreCreate.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreCreate.cshtml
@@ -34,7 +34,7 @@
                 <!-- Content Header (Page header) -->
                 <section class="content-header">
                     <h1>
-                        <i class="@entityIcon"></i> Create @controller
+                        <i class="@entityIcon text-primary"></i> Create @controller
                     </h1>
                 </section>
                 <!-- Main content -->
