--- a/netcore/Views/Shared/_AdminlteNetcoreDelete.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreDelete.cshtml
@@ -33,7 +33,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    <i class="@entityIcon"></i> Delete @controller ?
+                    <i class="@entityIcon text-primary"></i> Delete @controller ?
                 </h1>
             </section>
             <!-- Main content -->
