--- a/netcore/Views/Shared/_AdminlteNetcoreEdit.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreEdit.cshtml
@@ -33,7 +33,7 @@
                 <!-- Content Header (Page header) -->
                 <section class="content-header">
                     <h1>
-                        <i class="@entityIcon"></i> Edit @controller
+                        <i class="@entityIcon text-primary"></i> Edit @controller
                     </h1>
                 </section>
                 <!-- Main content -->
