--- a/netcore/Views/Product/Index.cshtml
+++ b/netcore/Views/Product/Index.cshtml
@@ -41,9 +41,12 @@
         {
             <tr>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.productId"><i class="fa fa-pencil"></i></a> |
-                    <a asp-action="Details" asp-route-id="@item.productId"><i class="fa fa-list"></i></a> |
-                    <a asp-action="Delete" asp-route-id="@item.productId"><i class="fa fa-trash"></i></a>
+                    <div class="tools">
+                        <a asp-action="Edit" asp-route-id="@item.productId"><i class="fa fa-pencil"></i></a> 
+                        <a asp-action="Details" asp-route-id="@item.productId"><i class="fa fa-list"></i></a> 
+                        <a asp-action="Delete" asp-route-id="@item.productId"><i class="fa fa-trash"></i></a>
+                    </div>
+                    
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.productCode)
