--- a/netcore/Views/Receiving/Index.cshtml
+++ b/netcore/Views/Receiving/Index.cshtml
@@ -44,9 +44,11 @@
         {
             <tr>
                 <td>
-                    
-                    <a asp-action="Details" asp-route-id="@item.receivingId"><i class="fa fa-list"></i></a> |
-                    <a asp-action="Delete" asp-route-id="@item.receivingId"><i class="fa fa-trash"></i></a>
+                    <div class="tools">
+                        <a asp-action="Details" asp-route-id="@item.receivingId"><i class="fa fa-list"></i></a> 
+                        <a asp-action="Delete" asp-route-id="@item.receivingId"><i class="fa fa-trash"></i></a>
+                    </div>
+                   
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.receivingNumber)
