--- a/netcore/Views/Shared/_AdminlteNetcoreIndex.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreIndex.cshtml
@@ -81,7 +81,7 @@
                     <div class="col-md-9">
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title"><i class="@entityIcon"></i> <span>@listTitle</span></h3>
+                                <h3 class="box-title"><i class="@entityIcon text-primary"></i> <span>@listTitle</span></h3>
                                 <div class="box-tools pull-right">
                                     <div class="has-feedback">
                                         <input type="text" id="mainSearch" class="form-control input-sm" placeholder="Search...">
