--- a/netcore/Views/Shipment/Index.cshtml
+++ b/netcore/Views/Shipment/Index.cshtml
@@ -50,8 +50,11 @@
         {
         <tr>
             <td>
-                <a asp-action="Details" asp-route-id="@item.shipmentId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash"></i></a>
+                <div class="tools">
+                    <a asp-action="Details" asp-route-id="@item.shipmentId"><i class="fa fa-list"></i></a> 
+                    <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash"></i></a>
+                </div>
+                
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.shipmentNumber)
