--- a/netcore/Views/TransferIn/Index.cshtml
+++ b/netcore/Views/TransferIn/Index.cshtml
@@ -44,9 +44,11 @@
         {
         <tr>
             <td>
+                <div class="tools">
+                    <a asp-action="Details" asp-route-id="@item.transferInId"><i class="fa fa-list"></i></a> 
+                    <a asp-action="Delete" asp-route-id="@item.transferInId"><i class="fa fa-trash"></i></a>
+                </div>
                 
-                <a asp-action="Details" asp-route-id="@item.transferInId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.transferInId"><i class="fa fa-trash"></i></a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.transferInNumber)
