--- a/netcore/Views/Branch/Index.cshtml
+++ b/netcore/Views/Branch/Index.cshtml
@@ -44,7 +44,7 @@
                 <div class="tools">
                     <a asp-action="Edit" asp-route-id="@item.branchId"><i class="fa fa-pencil"></i></a>
                     <a asp-action="Details" asp-route-id="@item.branchId"><i class="fa fa-list"></i></a>
-                    <a asp-action="Delete" asp-route-id="@item.branchId"><i class="fa fa-trash"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.branchId"><i class="fa fa-trash text-red"></i></a>
                 </div>
                 
             </td>
