--- a/netcore/Views/Shared/_AdminlteNetcoreDelete.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreDelete.cshtml
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="col-md-9">
                         <!-- Default box -->
-                        <div class="box box-primary">
+                        <div class="box box-danger">
 
                             <div class="box-body">
                                 @RenderBody()
@@ -51,7 +51,7 @@
                                 <div class="form-group">
                                     <form asp-action="Delete">
                                         <input type="hidden" asp-for="@id" />
-                                        <input type="submit" value="Delete" class="btn btn-primary" />
+                                        <input type="submit" value="Delete" class="btn btn-danger" />
                                         <a asp-action="Index" class="btn btn-default">Back to List</a>
                                     </form>
                                 </div>
