--- a/netcore/Views/Shipment/Index.cshtml
+++ b/netcore/Views/Shipment/Index.cshtml
@@ -52,7 +52,7 @@
             <td>
                 <div class="tools">
                     <a asp-action="Details" asp-route-id="@item.shipmentId"><i class="fa fa-list"></i></a> 
-                    <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash text-red"></i></a>
                 </div>
                 
             </td>
