--- a/netcore/Views/TransferIn/Index.cshtml
+++ b/netcore/Views/TransferIn/Index.cshtml
@@ -46,7 +46,7 @@
             <td>
                 <div class="tools">
                     <a asp-action="Details" asp-route-id="@item.transferInId"><i class="fa fa-list"></i></a> 
-                    <a asp-action="Delete" asp-route-id="@item.transferInId"><i class="fa fa-trash"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.transferInId"><i class="fa fa-trash text-red"></i></a>
                 </div>
                 
             </td>
