--- a/netcore/Views/Manage/ChangePassword.cshtml
+++ b/netcore/Views/Manage/ChangePassword.cshtml
@@ -33,16 +33,17 @@
                             <p class="text-muted text-center">Member</p>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                    <b>Purchase Order</b> <a class="pull-right"></a>
+                                    <b>Department</b> <a class="pull-right"></a>
                                 </li>
                                 <li class="list-group-item">
-                                    <b>Sales Order</b> <a class="pull-right"></a>
+                                    <b>Division</b> <a class="pull-right"></a>
                                 </li>
                             </ul>
                             <a href="@Url.Action("ChangeProfilePicture", "Manage")" class="btn btn-primary btn-block">
                                 <i class="fa fa-picture-o">
-                                    <span>Change Picture</span>
+
                                 </i>
+                                <span> Change Picture</span>
                             </a>
                         </div>
                         <!-- /.box-body -->
