--- a/netcore/Views/Manage/ChangeProfilePicture.cshtml
+++ b/netcore/Views/Manage/ChangeProfilePicture.cshtml
@@ -33,16 +33,17 @@
                             <p class="text-muted text-center">Member</p>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                    <b>Followers</b> <a class="pull-right">1,322</a>
+                                    <b>Department</b> <a class="pull-right"></a>
                                 </li>
                                 <li class="list-group-item">
-                                    <b>Following</b> <a class="pull-right">543</a>
+                                    <b>Division</b> <a class="pull-right"></a>
                                 </li>
                             </ul>
                             <a href="@Url.Action("ChangePassword", "Manage")" class="btn btn-primary btn-block">
                                 <i class="fa fa-key">
-                                    <span>Change Password</span>
+
                                 </i>
+                                <span> Change Password</span>
                             </a>
                         </div>
                         <!-- /.box-body -->
