--- a/netcore/Views/Home/Index.cshtml
+++ b/netcore/Views/Home/Index.cshtml
@@ -102,6 +102,45 @@
         </div>
 
         <div class="row">
+            <div class="col-lg-6">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">Product Type</h3>
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                                <i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <div class="box-body">
+                        <canvas id="pieChart" style="height:250px"></canvas>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="box box-success">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">Sales vs Purchase (Last 6 Months)</h3>
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                                <i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <div class="box-body">
+                        <div class="chart">
+                            <canvas id="barChart" style="height:230px"></canvas>
+                        </div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-lg-12">
                 <div class="box box-warning">
                     <div class="box-header with-border">
@@ -162,6 +201,8 @@
 
 
 @section Scripts{
+    <!-- ChartJS -->
+    <script src="~/adminlte/components/chart.js/Chart.js"></script>
     <script>
         $(document).ready(function () {
             var mainTable;
@@ -176,9 +217,122 @@
 
             $('#mainSearch').keyup(function () {
                 mainTable.search($(this).val()).draw();
-            })
+            });
+
+
+            //-------------
+            //- PIE CHART -
+            //-------------
+            // Get context with jQuery - using jQuery's .get() method.
+            var pieChartCanvas = $('#pieChart').get(0).getContext('2d');
+            var pieChart       = new Chart(pieChartCanvas);
+            var pieOptions     = {
+                //Boolean - Whether we should show a stroke on each segment
+                segmentShowStroke    : true,
+                //String - The colour of each segment stroke
+                segmentStrokeColor   : '#fff',
+                //Number - The width of each segment stroke
+                segmentStrokeWidth   : 2,
+                //Number - The percentage of the chart that we cut out of the middle
+                percentageInnerCutout: 50, // This is 0 for Pie charts
+                //Number - Amount of animation steps
+                animationSteps       : 100,
+                //String - Animation easing effect
+                animationEasing      : 'easeOutBounce',
+                //Boolean - Whether we animate the rotation of the Doughnut
+                animateRotate        : true,
+                //Boolean - Whether we animate scaling the Doughnut from the centre
+                animateScale         : false,
+                //Boolean - whether to make the chart responsive to window resizing
+                responsive           : true,
+                // Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
+                maintainAspectRatio  : true,
+                //String - A legend template
+                legendTemplate       : '<ul class="<%=name.toLowerCase()%>-legend"><% for (var i=0; i<segments.length; i++){%><li><span style="background-color:<%=segments[i].fillColor%>"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>'
+            };
+                    
+
+            $.ajax({
+            url: '/api/dashboard/getpiedata',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+
+                //Create pie or douhnut chart
+                pieChart.Doughnut(data, pieOptions)
+
+            },
+                error: function (error) {
+                    console.log(error);
+                }
+
+            });
+
+
+        //-------------
+        //- BAR CHART -
+        //-------------
+        
+        var barChartCanvas                   = $('#barChart').get(0).getContext('2d')
+        var barChart                         = new Chart(barChartCanvas)
+
+        var barChartOptions                  = {
+            //Boolean - Whether the scale should start at zero, or an order of magnitude down from the lowest value
+            scaleBeginAtZero        : true,
+            //Boolean - Whether grid lines are shown across the chart
+            scaleShowGridLines      : true,
+            //String - Colour of the grid lines
+            scaleGridLineColor      : 'rgba(0,0,0,.05)',
+            //Number - Width of the grid lines
+            scaleGridLineWidth      : 1,
+            //Boolean - Whether to show horizontal lines (except X axis)
+            scaleShowHorizontalLines: true,
+            //Boolean - Whether to show vertical lines (except Y axis)
+            scaleShowVerticalLines  : true,
+            //Boolean - If there is a stroke on each bar
+            barShowStroke           : true,
+            //Number - Pixel width of the bar stroke
+            barStrokeWidth          : 2,
+            //Number - Spacing between each of the X value sets
+            barValueSpacing         : 5,
+            //Number - Spacing between data sets within X values
+            barDatasetSpacing       : 1,
+            //String - A legend template
+            legendTemplate          : '<ul class="<%=name.toLowerCase()%>-legend"><% for (var i=0; i<datasets.length; i++){%><li><span style="background-color:<%=datasets[i].fillColor%>"></span><%if(datasets[i].label){%><%=datasets[i].label%><%}%></li><%}%></ul>',
+            //Boolean - whether to make the chart responsive
+            responsive              : true,
+            maintainAspectRatio     : true
+        }
+
+        barChartOptions.datasetFill = false;
+        
+
+         $.ajax({
+            url: '/api/dashboard/getbardata',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+
+                //Create bar chart
+                var barChartData = data;
+                barChartData.datasets[1].fillColor   = '#00a65a'
+                barChartData.datasets[1].strokeColor = '#00a65a'
+                barChartData.datasets[1].pointColor  = '#00a65a'
+                barChart.Bar(barChartData, barChartOptions);
+                
+
+            },
+                error: function (error) {
+                    console.log(error);
+                }
+
+            });
+
+
 
         });
+
+
 
 
     </script>
