add default branch field

--- a/netcore/Views/Branch/Delete.cshtml
+++ b/netcore/Views/Branch/Delete.cshtml
@@ -25,6 +25,12 @@
             @Html.DisplayFor(model => model.description)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.isDefaultBranch)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.isDefaultBranch)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.street1)
         </dt>
         <dd>
