--- a/netcore/Views/PurchaseOrder/Delete.cshtml
+++ b/netcore/Views/PurchaseOrder/Delete.cshtml
@@ -60,6 +60,12 @@
             @Html.DisplayFor(model => model.description)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.branch)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.branch.branchName)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.picInternal)
         </dt>
         <dd>
