finish. change background for login, register and forgot password.

--- a/netcore/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/netcore/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -4,6 +4,11 @@
 }
 
 
-<div class="text-center">
-    <h3>Please check your email to reset your password.</h3>
+
+<div class="register-box">
+    <div class="register-box-body">
+        <div class="text-center">
+            <h3>Please check your email to reset your password.</h3>
+        </div>
+    </div>
 </div>
