--- a/netcore/Views/Account/ResetPassword.cshtml
+++ b/netcore/Views/Account/ResetPassword.cshtml
@@ -5,10 +5,11 @@
 }
 
 <div class="register-box">
-    <div class="register-logo">
-        <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>ASP</b>.NET</a>
-    </div>
+    
     <div class="register-box-body">
+        <div class="register-logo">
+            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>IN</b>VENTORY</a>
+        </div>
         <p class="login-box-msg">Register a new membership</p>
         <form method="post">
 
@@ -35,11 +36,11 @@
             <button type="submit" class="btn btn-primary btn-block btn-flat">Reset</button>
 
 
-            
+
 
         </form>
 
-        
+
     </div>
     <!-- /.form-box -->
 </div>
