--- a/netcore/Views/Account/SignedOut.cshtml
+++ b/netcore/Views/Account/SignedOut.cshtml
@@ -3,6 +3,11 @@
     Layout = "_AdminlteNetcoreBlank";
 }
 
-<div class="text-center">
-    <h3>You have successfully signed out.</h3>
+
+<div class="register-box">
+    <div class="register-box-body">
+        <div class="text-center">
+            <h3>You have successfully signed out.</h3>
+        </div>
+    </div>
 </div>
