--- a/netcore/Views/Account/ConfirmEmail.cshtml
+++ b/netcore/Views/Account/ConfirmEmail.cshtml
@@ -4,6 +4,11 @@
 }
 
 
-<div class="text-center">
-    <h3>Thank you for confirming your email.</h3>
+
+<div class="register-box">
+    <div class="register-box-body">
+        <div class="text-center">
+            <h3>Thank you for confirming your email.</h3>
+        </div>
+    </div>
 </div>
