--- a/netcore/Views/Account/Lockout.cshtml
+++ b/netcore/Views/Account/Lockout.cshtml
@@ -3,7 +3,11 @@
     Layout = "_AdminlteNetcoreBlank";
 }
 
-
-<div class="text-center">
-    <h3>This account has been locked out, please try again later.</h3>
+<div class="register-box">
+    <div class="register-box-body">
+        <div class="text-center">
+            <h3>This account has been locked out, please try again later.</h3>
+        </div>
+    </div>
 </div>
+
