--- a/netcore/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/netcore/Views/Account/ResetPasswordConfirmation.cshtml
@@ -3,6 +3,11 @@
     Layout = "_AdminlteNetcoreBlank";
 }
 
-<div class="text-center">
-    <h3>Your password has been reset. Please <a asp-action="Login">click here to log in</a>.</h3>
+
+<div class="register-box">
+    <div class="register-box-body">
+        <div class="text-center">
+            <h3>Your password has been reset. Please <a asp-action="Login">click here to log in</a>.</h3>
+        </div>
+    </div>
 </div>
