--- a/netcore/Views/Shared/_AdminlteNetcoreBlank.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBlank.cshtml
@@ -27,7 +27,7 @@
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition lockscreen">
+<body class="hold-transition lockscreen" style="background-image: url('/images/b2.jpg') ; background-size: cover; ">
     <!-- Automatic element centering -->
     <div class="lockscreen-wrapper">
         @RenderBody()
