--- a/netcore/Views/Shared/_AdminlteNetcoreLogin.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreLogin.cshtml
@@ -30,7 +30,7 @@
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition login-page">
+<body class="hold-transition login-page" style="background-image: url('/images/b2.jpg') ; background-size: cover; ">
     @RenderBody()
     <!-- jQuery 3 -->
     <script src="~/adminlte/components/jquery/dist/jquery.min.js"></script>
