--- a/netcore/Views/Shared/_AdminlteNetcoreRegister.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreRegister.cshtml
@@ -32,7 +32,7 @@
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition register-page">
+<body class="hold-transition register-page" style="background-image: url('/images/b2.jpg') ; background-size: cover; ">
     @RenderBody()
     <!-- /.register-box -->
     <!-- jQuery 3 -->
