edit update changeprofile picuter using class rather than id

--- a/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
@@ -15,7 +15,7 @@
         {
             <div class="user-panel">
                 <div class="pull-left image">
-                    <img src="@Model.profilePictureUrl" class="img-circle" alt="User Image">
+                    <img src="@Model.profilePictureUrl" class="img-circle profilePicture" alt="User Image">
                 </div>
                 <div class="pull-left info">
                     <p>@Model.Email</p>
