--- a/netcore/Views/Manage/ChangeProfilePicture.cshtml
+++ b/netcore/Views/Manage/ChangeProfilePicture.cshtml
@@ -27,7 +27,7 @@
                     <!-- Profile Image -->
                     <div class="box box-primary">
                         <div class="box-body box-profile">
-                            <img class="profile-user-img img-responsive img-circle" src="@appUser.profilePictureUrl" alt="User profile picture">
+                            <img class="profile-user-img img-responsive img-circle profilePicture" src="@appUser.profilePictureUrl" alt="User profile picture">
 
                             <h3 class="profile-username text-center">@appUser.Email</h3>
                             <p class="text-muted text-center">Member</p>
@@ -65,7 +65,7 @@
                             {
 
                                 <div>
-                                    <img id="profilePicture" class="profile-user-img img-responsive img-circle" src="@Model.profilePictureUrl" alt="User profile picture">
+                                    <img class="profile-user-img img-responsive img-circle profilePicture" src="@Model.profilePictureUrl" alt="User profile picture">
                                 </div>
                                 <div>
                                     <span class="btn btn-success fileinput-button">
@@ -117,7 +117,7 @@
                 url: url,
                 dataType: 'json',
                 done: function (e, data) {
-                    $('#profilePicture').attr('src', '../uploads/' + data.result);
+                    $('.profilePicture').attr('src', '../uploads/' + data.result);
                 },
                 progressall: function (e, data) {
                     var progress = parseInt(data.loaded / data.total * 100, 10);
