--- a/netcore/Views/Shared/_AdminlteNetcoreMainHeader.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainHeader.cshtml
@@ -22,13 +22,13 @@
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="@Model.profilePictureUrl" class="user-image" alt="User Image">
+                            <img src="@Model.profilePictureUrl" class="user-image profilePicture" alt="User Image">
                             <span class="hidden-xs">@Model.Email</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- User image -->
                             <li class="user-header">
-                                <img src="@Model.profilePictureUrl" class="img-circle" alt="User Image">
+                                <img src="@Model.profilePictureUrl" class="img-circle profilePicture" alt="User Image">
                                 <p>
                                     @Model.Email
                                 </p>
